--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="slicknav.css">
 <link rel="stylesheet" href="days_of_life.css">
+<link rel="stylesheet" href="fontawesome.min.css">
 <script src="./p5.min.js">
 
 </script>
@@ -16,23 +15,29 @@
   <h1 class="title">Days in Life</h1>
 <div>
   <form class="registration" id="registration" class="form-input">
-    <div class="row"> <span>Date of Birth</span>
-      <input id="datePicker" type="date" oninput="calculateDays()" value=""/>
+    <div class="row">
+      <p class="birthday">Date of Birth (dd/mm/yyyy)</p>
+    </div>
+    <div class="row">
+      <input id="datePicker" type="date" class="datePicker" value=""/>
 		</div>
-    <div class="row"> <span>Format</span>
-      <select id="format" >
-        <option>Milliseconds</option>
-        <option>Seconds</option>
-        <option>Minutes</option>
-        <option>Hours</option>
-        <option selected="selected">Days</option>
-        <option>Weeks</option>
-      </select>
+    <div class="row">
+      <div class="select-wrapper">
+        <select id="format" >
+          <option>Milliseconds</option>
+          <option>Seconds</option>
+          <option>Minutes</option>
+          <option>Hours</option>
+          <option selected="selected">Days</option>
+          <option>Weeks</option>
+        </select>
+      </div>
     </div>
 
   </form>
   <h3 id="daysOutput">You have lived 0 days already</h3>
   <script src="days_of_life.js"></script>
 </div>
+
 </body>
 </html>
