Now compatible with Safari

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div>
   <form class="registration" id="registration" class="form-input">
     <div class="row">
-      <p class="birthday">Date of Birth (dd/mm/yyyy)</p>
+      <p class="birthday">Date of Birth (dd.mm.yyyy)</p>
     </div>
     <div class="row">
       <input id="datePicker" type="date" class="datePicker" value=""/>
