Changed name to present title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="days_of_life.css">
+<link rel="stylesheet" href="days_in_life.css">
 <link rel="stylesheet" href="fontawesome.min.css">
 <script src="./p5.min.js">
 
@@ -36,7 +36,7 @@
 
   </form>
   <h3 id="daysOutput">You have lived 0 days already</h3>
-  <script src="days_of_life.js"></script>
+  <script src="days_in_life.js"></script>
 </div>
 
 </body>
